# secretsnake

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/dicewarecli/: dicewarecli.py
src/secretsnake/: generator.py  parser.py
