[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diceware-cli"
version = "1"
authors = [{name="Lin Mackay", email="lin@ml1n.net"}]
description = "Simple command-line diceware tool."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dicewarecli = ["src/dicewarecli/*.wordlist"]

[project.scripts]
diceware = "dicewarecli.dicewarecli:main"