[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secretsnake"
version = "1.0"
authors = [{name="Lin Mackay", email="lin@ml1n.net"}]
description = "Simple command-line diceware tool."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secretsnake = ["src/secretsnake/*.wordlist"]

[project.scripts]
secretsnake = "secretsnake.parser:main"